# cts-glvk

./: .gitignore  .gitmodules  CMakeLists.txt  manifest.json
contrib/glad/: CMakeLists.txt
contrib/glad/include/glad/: glad.h
contrib/glad/src/: glad.c
include/cts/: align.h  allocator.h  buffer.h  buffer_private.h  buffer_view_private.h  bump_allocator.h  bump_allocator_proxy.h  command_buffer.h  command_buffer_private.h  command_dispatcher.h  command_pool.h  command_pool_private.h  commands.h  condition_variable.h  constants_private.h  descriptor_pool.h  descriptor_pool_private.h  descriptor_set.h  descriptor_set_layout.h  descriptor_set_layout_private.h  descriptor_set_private.h  device.h  device_memory.h  device_memory_private.h  device_private.h  fence.h  fence_private.h  framebuffer.h  framebuffer_private.h  fullscreen_texture.h  generic_queue.h  gl_color_blend_state_changes.h  gl_depth_stencil_state_changes.h  gl_helper.h  gl_pipeline.h  gl_rasterization_state_changes.h  gl_render_pass.h  gl_texture.h  icd.h  image.h  (+42 more)
include/cts/commanddefs/: allocate_descriptor_sets.h  allocate_memory.h  cmd_base.h  cmd_begin_query.h  cmd_begin_render_pass.h  cmd_bind_descriptor_sets.h  cmd_bind_index_buffer.h  cmd_bind_pipeline.h  cmd_bind_vertex_buffers.h  cmd_blit_image.h  cmd_clear_attachments.h  cmd_clear_color_image.h  cmd_clear_depth_stencil_image.h  cmd_copy_buffer.h  cmd_copy_buffer_to_image.h  cmd_copy_image.h  cmd_copy_image_to_buffer.h  cmd_copy_query_pool_results.h  cmd_dispatch.h  cmd_dispatch_base.h  cmd_dispatch_indirect.h  cmd_draw.h  cmd_draw_indexed.h  cmd_draw_indexed_indirect.h  cmd_draw_indirect.h  cmd_end_query.h  cmd_end_render_pass.h  cmd_execute_commands.h  cmd_fill_buffer.h  cmd_next_subpass.h  cmd_pipeline_barrier.h  cmd_push_constants.h  cmd_reset_event.h  cmd_reset_query_pool.h  cmd_resolve_image.h  cmd_set_blend_constants.h  cmd_set_depth_bias.h  cmd_set_depth_bounds.h  cmd_set_device_mask.h  cmd_set_event.h  (+38 more)
include/cts/os/: condition_variable.h  mutex.h  semaphore.h  thread.h
include/cts/platform/: platform_condition_variable.h  platform_mutex.h  platform_semaphore.h
include/cts/typedefs/: access_flags.h  application_info.h  attachment_description.h  attachment_description_flags.h  attachment_reference.h  bool.h  buffer.h  buffer_copy.h  buffer_create_flags.h  buffer_image_copy.h  buffer_memory_barrier.h  buffer_usage_flags.h  buffer_view.h  clear_attachment.h  clear_color_value.h  clear_depth_stencil_value.h  clear_rect.h  clear_value.h  color_component_flags.h  command_buffer.h  command_buffer_begin_info.h  command_buffer_inheritance_info.h  command_buffer_reset_flags.h  command_buffer_usage_flags.h  command_pool.h  command_pool_create_flags.h  component_mapping.h  condition_variable.h  cull_mode_flags.h  dependency_flags.h  descriptor.h  descriptor_pool.h  descriptor_pool_create_flags.h  descriptor_pool_size.h  descriptor_set.h  descriptor_set_layout.h  device.h  device_create_flags.h  device_memory.h  device_queue.h  (+84 more)
include/cts/util/: generic_queue.h  linear_allocator.h  pool_allocator.h
include/opengl/cts/: command_dispatcher.h  commands.h  constants.h  device_memory.h  renderer_impl.h  renderer_proxy.h  type_mapper.h
include/win32/cts/: device_info.h  gl_context.h  surface.h  surface_private.h
sample/: CMakeLists.txt  sample.cpp  shader.frag
sample/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
src/: allocator.c  buffer.c  bump_allocator.c  bump_allocator_proxy.c  command_buffer.c  command_dispatcher.c  command_pool.c  constants.c  descriptor_pool.c  descriptor_set.c  descriptor_set_layout.c  device.c  device_memory.c  fence.c  framebuffer.c  fullscreen_texture.c  generic_queue.c  gl_helper.c  icd.c  image.c  image_view.c  instance.c  linear_allocator.c  physical_device.c  pipeline.c  pipeline_cache.c  pipeline_layout.c  pool_allocator.c  query_pool.c  queue.c  render_pass.c  sampler.c  semaphore.c  shader_module.c  swapchain.c  type_mapper.c  uuid.c
src/opengl/: buffer.c  command_buffer.c  command_dispatcher.c  command_pool.c  constants.c  descriptor_pool.c  descriptor_set.c  descriptor_set_layout.c  device.c  device_memory.c  fence.c  framebuffer.c  fullscreen_texture.c  generic_queue.c  image.c  image_view.c  instance.c  physical_device.c  pipeline.c  pipeline_layout.c  query_pool.c  queue.c  render_pass.c  renderer.c  renderer_impl.c  renderer_proxy.c  sampler.c  semaphore.c  shader_module.c  swapchain.c  type_mapper.c
src/opengl/posix/: condition_variable.c  mutex.c  semaphore.c  thread.c
src/opengl/private/: buffer_private.h  buffer_view_private.h  command_buffer_private.h  command_pool_private.h  constants_private.h  descriptor_pool_private.h  descriptor_private.h  descriptor_set_layout_private.h  descriptor_set_private.h  device_memory_private.h  device_private.h  fence_private.h  framebuffer_private.h  image_private.h  image_view_private.h  instance_private.h  physical_device_private.h  pipeline_layout_private.h  pipeline_private.h  private.h  query_pool_private.h  queue_private.h  render_pass_private.h  sampler_private.h  semaphore_private.h  shader_module_private.h  shader_private.h  swapchain_private.h
src/opengl/win32/: condition_variable.c  device_info.c  mutex.c  semaphore.c  surface.c  thread.c  (+2 more)
src/posix/: platform_condition_variable.c  platform_mutex.c  platform_semaphore.c  platform_thread.c  platform_time.c
src/private/: buffer_private.h  buffer_view_private.h  command_buffer_private.h  command_pool_private.h  descriptor_pool_private.h  descriptor_set_layout_private.h  descriptor_set_private.h  device_memory_private.h  device_private.h  fence_private.h  framebuffer_private.h  image_private.h  image_view_private.h  instance_private.h  physical_device_private.h  pipeline_layout_private.h  pipeline_private.h  query_pool_private.h  render_pass_private.h  sampler_private.h  semaphore_private.h  shader_module_private.h  swapchain_private.h
src/win32/: device_info.c  gl_context.c  platform_condition_variable.c  platform_mutex.c  platform_semaphore.c  platform_thread.c  platform_time.c  surface.c
(+135 files in other folders)
